--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 return false;
             }
             else{
-                alert("Try again");
+                alert("Please try again");
                 return false;
             }
         }
